[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Nature/Water.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0, 0.439216, 1, 0.584314 )

[sub_resource type="BoxShape" id=3]

[node name="Water" type="Spatial"]

[node name="Area" type="Area" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )
[connection signal="area_entered" from="Area" to="Area" method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="Area" method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
